--- a/public/styles.scss
+++ b/public/styles.scss
@@ -160,83 +160,7 @@ $arrowColor: rgb(211, 211, 211);
 	color: black;
 }
 body {
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
-	::-webkit-scrollbar {
-		display: none;
-	}
-	overflow-x: hidden;
-	width: 100vw;
-	height: 100vh;
-	// overflow: hidden;
-	.splash {
-		animation-name: zIndex2-1;
-		animation-fill-mode: forwards;
-		animation-delay: 12s;
-		animation-duration: 0s;
-		height: 100vh;
-		position: absolute;
-		display: flex;
-		justify-content: center;
-		-webkit-touch-callout: none; /* iOS Safari */
-		-webkit-user-select: none; /* Safari */
-		-khtml-user-select: none; /* Konqueror HTML */
-		-moz-user-select: none; /* Old versions of Firefox */
-		-ms-user-select: none; /* Internet Explorer/Edge */
-		user-select: none; /* Non-prefixed version, currently
-		supported by Chrome,
-		Edge,
-		Opera and Firefox */
-		video {
-			height: 100vh;
-			position: fixed;
-			z-index: 2;
-			animation-fill-mode: forwards;
-			animation-delay: 9s;
-			animation-name: opacityToZero;
-			animation-duration: 0s;
-		}
-		#mask {
-			z-index: 3;
-			background-color: rgb(255, 255, 255);
-			animation-name: opacityToZero;
-			animation-delay: 9s;
-			animation-fill-mode: forwards;
-			animation-duration: 0s;
-			height: 100vh;
-			width: 100vw;
-			color: black;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			font-size: 100px;
-			mix-blend-mode: screen;
-			h1 {
-				font-family: Biko, sans-serif;
-				line-height: 80%;
-				margin: 0;
-				transition: 0.3s ease;
-				&:hover {
-					color: rgb(83, 83, 83);
-				}
-			}
-		}
-		.white {
-			position: fixed;
-			top: 0;
-			left: 0;
-			height: 100vh;
-			width: 100vw;
-			z-index: 4;
-			background-color: white;
-			mix-blend-mode: screen;
-			animation-name: white2black, black2white, opacityToZero;
-			animation-duration: 3s, 3s, 3s;
-			animation-delay: 1s, 6s, 9s;
-			animation-fill-mode: forwards, forwards;
-		}
-	}
+	width: 100%;
 	#navBar {
 		position: sticky;
 		top: 0px;
@@ -306,274 +230,358 @@ body {
 			}
 		}
 	}
-	.blogs {
-		scroll-snap-type: y mandatory;
-		overflow-y: scroll;
+	.all {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+		::-webkit-scrollbar {
+			display: none;
+		}
+		overflow-x: hidden;
+		width: 100vw;
 		height: 100vh;
-		.blog {
-			// Up Arrow Swipe
-			.arrowUp {
-				z-index: 1;
-				display: flex;
-				justify-content: right;
-				position: relative;
-				top: 50px;
-				right: 3px;
-				.arrow-up {
-					height: 40px;
-					width: 40px;
-					display: block;
-					border: 2px solid $arrowColor;
-					position: relative;
-					cursor: pointer;
-					transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
-					overflow: hidden;
-				}
-
-				.arrow-slide {
-					left: 0;
-					top: -100%;
-					width: 100%;
-					height: 100%;
-					background: #666;
-					position: absolute;
-					display: block;
-					z-index: 0;
-				}
-
-				.left-arm {
-					position: absolute;
-					z-index: 1;
-					background-color: transparent;
-					top: 19px;
-					left: 3px;
-					width: 20px;
-					display: block;
-					transform: rotate(-45deg);
-					&:after {
-						content: "";
-						background-color: $arrowColor;
-						width: 20px;
-						height: 1px;
-						display: block;
-						border-radius: 1px;
-						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
-						transform-origin: right center;
-						z-index: -1;
-					}
-				}
-
-				.right-arm {
-					position: absolute;
-					z-index: 1;
-					background-color: transparent;
-					top: 19px;
-					left: 17px;
-					width: 20px;
-					display: block;
-					transform: rotate(45deg);
-					border-radius: 2px;
-					&:after {
-						content: "";
-						background-color: $arrowColor;
-						width: 20px;
-						height: 1px;
-						display: block;
-						border-radius: 1px;
-						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
-						transform-origin: left center;
-						z-index: -1;
-					}
-				}
-
-				.arrow-up:hover {
-					transition: all 0.1s;
-					.left-arm:after {
-						transform: rotate(-10deg);
-					}
-					.right-arm:after {
-						transform: rotate(10deg);
-					}
-					.arrow-slide {
-						transition: all 0.4s ease-in-out;
-						transform: translateY(200%);
-					}
-				}
-			}
-			.arrowDown {
-				z-index: 1;
-				display: flex;
-				justify-content: right;
-				position: absolute;
-				right: 3px;
-				bottom: 3px;
-				.arrow-up {
-					height: 40px;
-					width: 40px;
-					display: block;
-					border: 2px solid $arrowColor;
-					position: relative;
-					cursor: pointer;
-					transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
-					overflow: hidden;
-				}
-
-				.arrow-slide {
-					left: 0;
-					top: -100%;
-					width: 100%;
-					height: 100%;
-					background: #666;
-					position: absolute;
-					display: block;
-					z-index: 0;
-				}
-
-				.left-arm {
-					position: absolute;
-					z-index: 1;
-					background-color: transparent;
-					top: 19px;
-					left: 3px;
-					width: 20px;
-					display: block;
-					transform: rotate(45deg);
-					&:after {
-						content: "";
-						background-color: $arrowColor;
-						width: 20px;
-						height: 1px;
-						display: block;
-						border-radius: 1px;
-						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
-						transform-origin: right center;
-						z-index: -1;
-					}
-				}
-
-				.right-arm {
-					position: absolute;
-					z-index: 1;
-					background-color: transparent;
-					top: 19px;
-					left: 17px;
-					width: 20px;
-					display: block;
-					transform: rotate(-45deg);
-					border-radius: 2px;
-					&:after {
-						content: "";
-						background-color: $arrowColor;
-						width: 20px;
-						height: 1px;
-						display: block;
-						border-radius: 1px;
-						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
-						transform-origin: left center;
-						z-index: -1;
-					}
-				}
-
-				.arrow-up:hover {
-					transition: all 0.1s;
-					.left-arm:after {
-						transform: rotate(10deg);
-					}
-					.right-arm:after {
-						transform: rotate(-10deg);
-					}
-					.arrow-slide {
-						transition: all 0.4s ease-in-out;
-						transform: translateY(200%);
-					}
-				}
-			}
-
-			scroll-snap-align: start;
-			background: rgb(0, 0, 0);
-			position: relative;
-			top: 50%;
-			transform: translate(0, -50%);
+		// overflow: hidden;
+		.splash {
+			animation-name: zIndex2-1;
+			animation-fill-mode: forwards;
+			animation-delay: 12s;
+			animation-duration: 0s;
 			height: 100vh;
+			position: absolute;
+			display: flex;
+			justify-content: center;
+			-webkit-touch-callout: none; /* iOS Safari */
+			-webkit-user-select: none; /* Safari */
+			-khtml-user-select: none; /* Konqueror HTML */
+			-moz-user-select: none; /* Old versions of Firefox */
+			-ms-user-select: none; /* Internet Explorer/Edge */
+			user-select: none; /* Non-prefixed version, currently
+		supported by Chrome,
+		Edge,
+		Opera and Firefox */
 			video {
-				position: absolute;
-				top: 50%;
-				transform: translate(-50%, -50%);
-				left: 50%;
 				height: 100vh;
-				filter: brightness(70%);
+				position: fixed;
+				z-index: 2;
+				animation-fill-mode: forwards;
+				animation-delay: 9s;
+				animation-name: opacityToZero;
+				animation-duration: 0s;
 			}
-			a {
-				.titleSnip {
-					position: absolute;
-					overflow: hidden;
-					height: 40%;
-					top: 33%;
-					width: 100vw;
-					padding: 3%;
-					text-align: center;
-					background-color: rgba(0, 0, 0, 0.2);
-					overflow: hidden;
-					&:before {
-						content: "";
-						display: block;
-						position: absolute;
-						background: rgba(255, 255, 255, 0.5);
-						width: 60px;
-						height: 100%;
-						left: 0;
-						top: 0;
-						opacity: 0.5;
-						filter: blur(50px);
-						transform: translateX(-150px) skewX(-15deg);
-					}
-					&:after {
-						content: "";
-						display: block;
-						position: absolute;
-						background: rgba(255, 255, 255, 0.2);
-						width: 30px;
-						height: 100%;
-						left: 30px;
-						top: 0;
-						opacity: 0;
-						filter: blur(5px);
-						transform: translateX(-100px) skewX(-15deg);
-					}
+			#mask {
+				z-index: 3;
+				background-color: rgb(255, 255, 255);
+				animation-name: opacityToZero;
+				animation-delay: 9s;
+				animation-fill-mode: forwards;
+				animation-duration: 0s;
+				height: 100vh;
+				width: 100vw;
+				color: black;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				font-size: 100px;
+				mix-blend-mode: screen;
+				h1 {
+					font-family: Biko, sans-serif;
+					line-height: 80%;
+					margin: 0;
+					transition: 0.3s ease;
 					&:hover {
+						color: rgb(83, 83, 83);
+					}
+				}
+			}
+			.white {
+				position: fixed;
+				top: 0;
+				left: 0;
+				height: 100vh;
+				width: 100vw;
+				z-index: 4;
+				background-color: white;
+				mix-blend-mode: screen;
+				animation-name: white2black, black2white, opacityToZero;
+				animation-duration: 3s, 3s, 3s;
+				animation-delay: 1s, 6s, 9s;
+				animation-fill-mode: forwards, forwards;
+			}
+		}
+
+		.blogs {
+			scroll-snap-type: y mandatory;
+			overflow-y: scroll;
+			height: 100vh;
+			.blog {
+				// Up Arrow Swipe
+				.arrowUp {
+					z-index: 1;
+					display: flex;
+					justify-content: right;
+					position: relative;
+					top: 50px;
+					right: 3px;
+					.arrow-up {
+						height: 40px;
+						width: 40px;
+						display: block;
+						border: 2px solid $arrowColor;
+						position: relative;
 						cursor: pointer;
+						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+						overflow: hidden;
+					}
+
+					.arrow-slide {
+						left: 0;
+						top: -100%;
+						width: 100%;
+						height: 100%;
+						background: #666;
+						position: absolute;
+						display: block;
+						z-index: 0;
+					}
+
+					.left-arm {
+						position: absolute;
+						z-index: 1;
+						background-color: transparent;
+						top: 19px;
+						left: 3px;
+						width: 20px;
+						display: block;
+						transform: rotate(-45deg);
+						&:after {
+							content: "";
+							background-color: $arrowColor;
+							width: 20px;
+							height: 1px;
+							display: block;
+							border-radius: 1px;
+							transition: all 0.5s
+								cubic-bezier(0.25, 1.7, 0.35, 1.5);
+							transform-origin: right center;
+							z-index: -1;
+						}
+					}
+
+					.right-arm {
+						position: absolute;
+						z-index: 1;
+						background-color: transparent;
+						top: 19px;
+						left: 17px;
+						width: 20px;
+						display: block;
+						transform: rotate(45deg);
+						border-radius: 2px;
+						&:after {
+							content: "";
+							background-color: $arrowColor;
+							width: 20px;
+							height: 1px;
+							display: block;
+							border-radius: 1px;
+							transition: all 0.5s
+								cubic-bezier(0.25, 1.7, 0.35, 1.5);
+							transform-origin: left center;
+							z-index: -1;
+						}
+					}
+
+					.arrow-up:hover {
+						transition: all 0.1s;
+						.left-arm:after {
+							transform: rotate(-10deg);
+						}
+						.right-arm:after {
+							transform: rotate(10deg);
+						}
+						.arrow-slide {
+							transition: all 0.4s ease-in-out;
+							transform: translateY(200%);
+						}
+					}
+				}
+				.arrowDown {
+					z-index: 1;
+					display: flex;
+					justify-content: right;
+					position: absolute;
+					right: 3px;
+					bottom: 3px;
+					.arrow-up {
+						height: 40px;
+						width: 40px;
+						display: block;
+						border: 2px solid $arrowColor;
+						position: relative;
+						cursor: pointer;
+						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+						overflow: hidden;
+					}
+
+					.arrow-slide {
+						left: 0;
+						top: -100%;
+						width: 100%;
+						height: 100%;
+						background: #666;
+						position: absolute;
+						display: block;
+						z-index: 0;
+					}
+
+					.left-arm {
+						position: absolute;
+						z-index: 1;
+						background-color: transparent;
+						top: 19px;
+						left: 3px;
+						width: 20px;
+						display: block;
+						transform: rotate(45deg);
+						&:after {
+							content: "";
+							background-color: $arrowColor;
+							width: 20px;
+							height: 1px;
+							display: block;
+							border-radius: 1px;
+							transition: all 0.5s
+								cubic-bezier(0.25, 1.7, 0.35, 1.5);
+							transform-origin: right center;
+							z-index: -1;
+						}
+					}
+
+					.right-arm {
+						position: absolute;
+						z-index: 1;
+						background-color: transparent;
+						top: 19px;
+						left: 17px;
+						width: 20px;
+						display: block;
+						transform: rotate(-45deg);
+						border-radius: 2px;
+						&:after {
+							content: "";
+							background-color: $arrowColor;
+							width: 20px;
+							height: 1px;
+							display: block;
+							border-radius: 1px;
+							transition: all 0.5s
+								cubic-bezier(0.25, 1.7, 0.35, 1.5);
+							transform-origin: left center;
+							z-index: -1;
+						}
+					}
+
+					.arrow-up:hover {
+						transition: all 0.1s;
+						.left-arm:after {
+							transform: rotate(10deg);
+						}
+						.right-arm:after {
+							transform: rotate(-10deg);
+						}
+						.arrow-slide {
+							transition: all 0.4s ease-in-out;
+							transform: translateY(200%);
+						}
+					}
+				}
+
+				scroll-snap-align: start;
+				background: rgb(0, 0, 0);
+				position: relative;
+				top: 50%;
+				transform: translate(0, -50%);
+				height: 100vh;
+				video {
+					position: absolute;
+					top: 50%;
+					transform: translate(-50%, -50%);
+					left: 50%;
+					height: 100vh;
+					filter: brightness(70%);
+				}
+				a {
+					.titleSnip {
+						position: absolute;
+						overflow: hidden;
+						height: 40%;
+						top: 33%;
+						width: 100vw;
+						padding: 3%;
+						text-align: center;
+						background-color: rgba(0, 0, 0, 0.2);
+						overflow: hidden;
 						&:before {
-							transform: translateX(120vw) skewX(-15deg);
-							opacity: 0.6;
-							transition: 1s;
+							content: "";
+							display: block;
+							position: absolute;
+							background: rgba(255, 255, 255, 0.5);
+							width: 60px;
+							height: 100%;
+							left: 0;
+							top: 0;
+							opacity: 0.5;
+							filter: blur(50px);
+							transform: translateX(-150px) skewX(-15deg);
 						}
 						&:after {
-							transform: translateX(120vw) skewX(-15deg);
-							opacity: 1;
-							transition: 1s;
+							content: "";
+							display: block;
+							position: absolute;
+							background: rgba(255, 255, 255, 0.2);
+							width: 30px;
+							height: 100%;
+							left: 30px;
+							top: 0;
+							opacity: 0;
+							filter: blur(5px);
+							transform: translateX(-100px) skewX(-15deg);
 						}
-					}
-					* {
-						margin: 5px;
-						font-family: "Century Gothic", "Lato", sans-serif;
-						font-size: 24px;
-						color: white;
-						text-shadow: 0px 6px 6px rgb(0, 0, 0);
+						&:hover {
+							cursor: pointer;
+							&:before {
+								transform: translateX(120vw) skewX(-15deg);
+								opacity: 0.6;
+								transition: 1s;
+							}
+							&:after {
+								transform: translateX(120vw) skewX(-15deg);
+								opacity: 1;
+								transition: 1s;
+							}
+						}
+						* {
+							margin: 5px;
+							font-family: "Century Gothic", "Lato", sans-serif;
+							font-size: 24px;
+							color: white;
+							text-shadow: 0px 6px 6px rgb(0, 0, 0);
+						}
 					}
 				}
 			}
 		}
 	}
+
 	.details {
+		box-sizing: border-box;
 		background-color: rgb(54, 54, 54);
-		overflow: scroll;
 		font-size: 1.5em;
-		position: relative;
 		top: 30px;
-		width: 100vw;
+		width: 100%;
 
 		video {
-			width: 100vw;
+			width: 100%;
 		}
 		.content {
 			& * {
@@ -582,14 +590,13 @@ body {
 			}
 			p {
 				text-indent: 50px;
-				font-family: Cambria, Cochin, Georgia, Times, "Times New Roman",
-					serif;
-			}
-			.delete {
-				i {
-					height: 100px;
-				}
+				font-family: Cambria;
 			}
 		}
+	}
+	footer {
+		background-color: rgb(32, 32, 32);
+		color: white;
+		text-align: center;
 	}
 }
