--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="/styles.css" />
 	<title>Andrew's Blogs | <%= title %></title>
 	<script type="text/javascript" src="https://livejs.com/live.js"></script>
