--- a/public/styles.css
+++ b/public/styles.css
@@ -620,8 +620,6 @@ body .all .blogs .blog a .titleSnip * {
 }
 
 body .details {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   background-color: #363636;
   font-size: 1.5em;
   top: 30px;
@@ -630,6 +628,10 @@ body .details {
 
 body .details video {
   width: 100%;
+}
+
+body .details .content {
+  padding: 30px;
 }
 
 body .details .content * {
@@ -642,9 +644,44 @@ body .details .content p {
   font-family: Cambria;
 }
 
+body .details .content .deleteDiv {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body .details .content .deleteDiv i {
+  cursor: pointer;
+  font-size: 1.5em;
+}
+
 body footer {
   background-color: #202020;
   color: white;
   text-align: center;
+  position: relative;
+}
+
+.create-blog {
+  width: 100%;
+  height: 100%;
+  background-color: violet;
+}
+
+.create-blog form {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 300px;
+  height: 400px;
+}
+
+.create-blog form * {
+  margin: 20px;
 }
 /*# sourceMappingURL=styles.css.map */
