--- a/views/details.ejs
+++ b/views/details.ejs
@@ -12,16 +12,16 @@
     <div class="content">
       <h2><%= blog.title %></h2>
       <p><%- blog.body %></p>
-      <a class="delete" data-doc="<%= blog._id %>">
-        <i class="bi bi-trash bi-5x"></i>
-      </a>
+      <div class="deleteDiv">
+        <i class="bi bi-trash delete" data-doc="<%= blog._id %>"></i>
+      </div>
     </div>
   </div>
 
   <%- include("./partials/footer.ejs") %>
 
   <script>
-    const trashcan = document.querySelector('a.delete');
+    const trashcan = document.querySelector('.delete');
 
     trashcan.addEventListener('click', (e) => {
       const endpoint = `/blogs/${trashcan.dataset.doc}`;
