--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,7 +6,7 @@
 
 		<div class="create-blog content">
 			<form action="/blogs" method="POST">
-				Limit: 1 blog / 20 seconds
+				<div>Limit: 1 blog / 20 seconds</div>
 				<label for="title">Blog title:</label>
 				<input type="text" id="title" name="title" required />
 				<label for="snippet">Blog snippet:</label>
