shimmering button for submit works

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -117,6 +117,51 @@
 // 		color: blue;
 // 	}
 // }
+@mixin shimmeringButton {
+	overflow: hidden;
+	&:before {
+		content: "";
+		display: block;
+		position: absolute;
+		background: rgba(255, 255, 255, 0.5);
+		width: 60px;
+		height: 100%;
+		left: 0;
+		top: 0;
+		opacity: 0.5;
+		filter: blur(30px);
+		transform: translateX(-100px) skewX(-15deg);
+	}
+	&:after {
+		content: "";
+		display: block;
+		position: absolute;
+		background: rgba(255, 255, 255, 0.2);
+		width: 30px;
+		height: 100%;
+		left: 30px;
+		top: 0;
+		opacity: 0;
+		filter: blur(5px);
+		transform: translateX(-100px) skewX(-15deg);
+	}
+	&:hover {
+		text-shadow: none;
+
+		background: rgb(29, 124, 100);
+		cursor: pointer;
+		&:before {
+			transform: translateX(300px) skewX(-15deg);
+			opacity: 0.6;
+			transition: 0.7s;
+		}
+		&:after {
+			transform: translateX(300px) skewX(-15deg);
+			opacity: 1;
+			transition: 0.7s;
+		}
+	}
+}
 $arrowColor: rgb(211, 211, 211);
 @font-face {
 	font-family: Biko;
@@ -656,49 +701,7 @@ body {
 			cursor: pointer;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 			font-size: 1.3em;
-			overflow: hidden;
-			&:before {
-				content: "";
-				display: block;
-				position: absolute;
-				background: rgba(255, 255, 255, 0.5);
-				width: 60px;
-				height: 100%;
-				left: 0;
-				top: 0;
-				opacity: 0.5;
-				filter: blur(30px);
-				transform: translateX(-100px) skewX(-15deg);
-			}
-			&:after {
-				content: "";
-				display: block;
-				position: absolute;
-				background: rgba(255, 255, 255, 0.2);
-				width: 30px;
-				height: 100%;
-				left: 30px;
-				top: 0;
-				opacity: 0;
-				filter: blur(5px);
-				transform: translateX(-100px) skewX(-15deg);
-			}
-			&:hover {
-				text-shadow: none;
-
-				background: rgb(29, 124, 100);
-				cursor: pointer;
-				&:before {
-					transform: translateX(300px) skewX(-15deg);
-					opacity: 0.6;
-					transition: 0.7s;
-				}
-				&:after {
-					transform: translateX(300px) skewX(-15deg);
-					opacity: 1;
-					transition: 0.7s;
-				}
-			}
+			@include shimmeringButton();
 		}
 	}
 }
