shimmering navbar is now a mixin

--- a/public/styles.css
+++ b/public/styles.css
@@ -154,7 +154,7 @@ body #navBar ul a li:after {
 
 body #navBar ul a li:hover {
   text-shadow: none;
-  background: #455047;
+  background: #1d7c64;
   cursor: pointer;
 }
 
