--- a/public/styles.scss
+++ b/public/styles.scss
@@ -228,49 +228,7 @@ body {
 					border-radius: 5px;
 					position: relative;
 					transition: background 0.2s ease-in-out;
-					overflow: hidden;
-					&:before {
-						content: "";
-						display: block;
-						position: absolute;
-						background: rgba(255, 255, 255, 0.5);
-						width: 60px;
-						height: 100%;
-						left: 0;
-						top: 0;
-						opacity: 0.5;
-						filter: blur(30px);
-						transform: translateX(-100px) skewX(-15deg);
-					}
-					&:after {
-						content: "";
-						display: block;
-						position: absolute;
-						background: rgba(255, 255, 255, 0.2);
-						width: 30px;
-						height: 100%;
-						left: 30px;
-						top: 0;
-						opacity: 0;
-						filter: blur(5px);
-						transform: translateX(-100px) skewX(-15deg);
-					}
-					&:hover {
-						text-shadow: none;
-
-						background: #455047;
-						cursor: pointer;
-						&:before {
-							transform: translateX(300px) skewX(-15deg);
-							opacity: 0.6;
-							transition: 0.7s;
-						}
-						&:after {
-							transform: translateX(300px) skewX(-15deg);
-							opacity: 1;
-							transition: 0.7s;
-						}
-					}
+					@include shimmeringButton();
 				}
 			}
 		}
