just need paragraph line breaks and about page

--- a/public/styles.css
+++ b/public/styles.css
@@ -778,4 +778,10 @@ body footer {
   -webkit-transition: 0.7s;
   transition: 0.7s;
 }
+
+.create-blog footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
 /*# sourceMappingURL=styles.css.map */
