--- a/public/styles.scss
+++ b/public/styles.scss
@@ -583,10 +583,15 @@ body {
 		width: 100%;
 
 		video {
-			width: 100%;
+			width: 70%;
+			position: relative;
+			border-radius: 5px;
+			left: 50%;
+			transform: translate(-50%, 20px);
+			margin-top: 50px;
 		}
 		.content {
-			padding: 30px;
+			padding: 20px;
 			& * {
 				margin: 30px;
 				color: honeydew;
