--- a/public/styles.scss
+++ b/public/styles.scss
@@ -627,6 +627,39 @@ body {
 			}
 		}
 	}
+	.about {
+		position: relative;
+		#kite {
+			background-image: url("kite.jpg");
+			background-repeat: no-repeat;
+			background-size: 100%;
+			height: 92vh;
+			width: 100%;
+			position: absolute;
+			top: 45px;
+		}
+		.yellow {
+			background-color: yellow;
+			position: absolute;
+			top: 45px;
+			height: 92vh;
+			width: 100%;
+			mix-blend-mode: hue;
+			clip-path: polygon(
+				100% 0,
+				100% 29%,
+				65% 53%,
+				75% 100%,
+				9% 100%,
+				0 6%
+			);
+		}
+		footer {
+			position: fixed;
+			bottom: 0;
+			width: 100%;
+		}
+	}
 	footer {
 		background-color: rgb(32, 32, 32);
 		color: white;
@@ -684,6 +717,7 @@ body {
 			@include shimmeringButton();
 		}
 	}
+
 	footer {
 		position: absolute;
 		bottom: 0;
