--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,10 +5,12 @@
   <%- include("./partials/nav.ejs") %>
 
   <div class="about content">
+    <div id='kite'></div>
+    <div class="yellow"></div>
     <h2>About Us</h2>
     <p>Please check out my portfolio at <a href='http://www.anhonestobserver.com'>http://www.anhonestobserver.com</a>, my LinkedIn at <a href='https://www.linkedin.com/in/andrewcbuensalida/'>https://www.linkedin.com/in/andrewcbuensalida/</a>', and my GitHub at <a href="https://github.com/andrewcbuensalida">https://github.com/andrewcbuensalida</a>. I have built full-stack websites/web applications such as an Instagram clone, web scrapers, games, and machine learning apps, with front-end technologies such as React and back-end servers such as Node, together with databases such as MongoDB, PostgreSQL, Firebase, all hosted in cloud platforms such as Amazon Web Services and Google Cloud Platform.</p>
+    <%- include("./partials/footer.ejs") %>
   </div>
 
-  <%- include("./partials/footer.ejs") %>
 </body>
 </html>
